fixed spacing issue

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -97,7 +97,7 @@ h1 {
 .longCard {
     height: 200px;  
     width: 600px;
-    margin: 1em;
+    margin: 2em;
     padding: 1em;
     border-radius: 5px;
     transition: .5s;
